[Fix] adding gap between article and title

--- a/src/components/Article.scss
+++ b/src/components/Article.scss
@@ -42,6 +42,7 @@ hr {
     color:$articleColor;
     // text-shadow: 0 5px 10px rgba(0, 0, 0, .1);
     font-weight: normal;
+    margin-top: 37px;
 
     * {
         max-width: 100%;
